<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/l_menu_inicio"
            android:icon="@drawable/ic_l_home"
            android:title="@string/left_menu_home"/>

        <item
            android:id="@+id/l_menu_toma_existencia"
            android:icon="@drawable/left_menu_add_exist"
            android:title="@string/left_menu_add"/>

        <item
            android:id="@+id/l_menu_list_existencia"
            android:icon="@drawable/left_menu_list_exist"
            android:title="@string/left_menu_list"/>
        <item
            android:id="@+id/l_menu_mant_ubic"
            android:icon="@drawable/left_menu_mantenedor"
            android:title="@string/left_menu_mant" />

        <item
            android:id="@+id/l_menu_herr_admin"
            android:icon="@drawable/left_menu_herr_admin"
            android:title="@string/left_menu_herr_admin"
            />
    </group>

</menu>